Improvements in responsiveness.

--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -17,27 +17,27 @@
     float: right;
 }
 .atk-align-left, .atk-align-bottom-left, .atk-align-middle-left, .atk-align-top-left {
-  text-align: left !important;
+  text-align: left;
 }
 .atk-align-right, .atk-align-bottom-right, .atk-align-middle-right, .atk-align-top-right {
-  text-align: right !important;
+  text-align: right;
 }
 .atk-align-center, .atk-align-bottom-center, .atk-align-middle-center, .atk-align-top-center {
-  text-align: center !important;
+  text-align: center;
 }
 [class*="atk-align-bottom"] {
   &, &[class*="atk-cells"]>.atk-cell {
-    vertical-align: bottom !important;
+    vertical-align: bottom;
   }
 }
 [class*="atk-align-middle"] {
   &, &[class*=atk-cells]>.atk-cell {
-    vertical-align: middle !important;
+    vertical-align: middle;
   }
 }
 [class*="atk-align-top"] {
   &, &[class*=atk-cells]>.atk-cell {
-    vertical-align: top !important;
+    vertical-align: top;
   }
 }
 
