--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -29,7 +29,7 @@ input:not([type=submit]):not([type=button]):not([type=radio]):not([type=file]):n
         outline: none;
     }
 }
-input:not([type=submit]):not([type=button]):not([type=radio]):not([type=file]):not([type=checkbox]), textarea, [class*="inputLabel"] {
+input:not([type=submit]):not([type=button]):not([type=radio]):not([type=file]):not([type=checkbox]), textarea, [class*="atk-inputLabel"] {
     .createElementPadding(@inputPadding, @inputPaddingRatio);
 }
 input[readonly] {
